--- a/student.html
+++ b/student.html
@@ -3,7 +3,22 @@
 <head>
     <script src="js/student.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
+    <table class="table table-sm">
+        <thead>
+        <tr>
+            <td>Name</td>
+            <td>FavColor</td>
+            <td>FavNumber</td>
+        </tr>
+        </thead>
+        <tbody id = "tbody">
+
+        </tbody>
+        </table>
+        <button onclick="display()" 
+        class="btn btn-primary">Display Students</button>
 </body>
 </html>
